kotlin-ide/idea/testData/multiplatform/correctOverloadResolutionAmbiguity/common/common.kt
// KT-34027
expect interface <!LINE_MARKER("descr='Has actuals in JS'")!>A<!><T> {
    fun <!LINE_MARKER("descr='Has actuals in JS'")!>foo<!>(x: T)
}

fun bar(): A<String> = null!!
